--- a/projects/finding_donors/finding_donors.ipynb
+++ b/projects/finding_donors/finding_donors.ipynb
@@ -922,8 +922,13 @@
    "metadata": {},
    "source": [
     "**Answer: ** \n",
-    "* we are trying to find a relation between the features so we can predict the income of a some person based on these features, and to do so, we have tried some models to which one best models this relation\n",
-    "* the final selected model is called \"logistic regression\", it performed well on training with a good accuracy and a good score, and also it was time efficient"
+    "\n",
+    "LogisticRegression is a tool which give us the prediction (a person makes more than 50,000 or not) by taking the attributes of that person and injecting it in a mathematical equation and outputs the prediction whether he makes more than $50,000 or not.\n",
+    "\n",
+    "and to do so, it goes on every example (row in the dataset) and inject it in this equation, then it calculates how far the result is from the actual result given in the dataset, and the DIFFERENCE between the result and the actual label is called the cost, it does this over all the dataset and calculate the sum of costs, \n",
+    "there are some ways to caclulate the cost like [MSE](https://en.wikipedia.org/wiki/Mean_squared_error) or [MAE](https://en.wikipedia.org/wiki/MAE), the less the overall cost the better the algorithm's prediction,\n",
+    "except in cases where there is imbalance in thedata set, \n",
+    "and so, our mission is to minimize this cost by modifing the equation's parameters using an algorithm like [GradientDescent](https://en.wikipedia.org/wiki/Gradient_descent), and then re-calculate the cost again and so on tell the algorithm finds a best or optimal solution.\n"
    ]
   },
   {
